<resources>
    <string name="app_name">TodayTask</string>
    <string name="welcome_to_ntodaytask">Welcome To</string>
    <string name="powered_by_todaytask">Powered by TodayTask</string>
    <string name="todaytask" />
    <string name="todo">TODO</string>
    <string name="hi_welcome">Hi...Welcome</string>
    <string name="please_sign_in_with_your_n_user_name_and_password">Please Sign in With Your \n User Name and Password</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="about_developer">About Developer</string>
    <string name="exit">Exit</string>
    <string name="released_version_v_1_0">Released Version - V.1.0</string>
    <string name="name_ayesh_chamikara">Name - Ayesh Chamikara</string>
    <string name="student_number_2021_t01198">Student Number - 2021/T01198</string>
    <string name="user_ninformation">User\nInformation</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="edit_your_information_in_here">Edit your information in here</string>
    <string name="password">Password</string>
    <string name="edit_my_info">Edit My Info</string>
    <string name="welcome">Welcome</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="task_time">Task Time</string>
    <string name="add_as_a_task">Add as a Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_your_task">Edit Your Task</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_email">Enter Your Email</string>
</resources>