<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewEventActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:rotation="180"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/back_arrow_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:fontFamily="@font/inriaserif_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_bars_borders"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/task_description"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_bars_borders"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/task_date"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_bars_borders"
            android:ems="10"
            android:inputType="date"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/task_time"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/taskTime"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_bars_borders"
            android:ems="10"
            android:inputType="time"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:text="@string/add_as_a_task"
        android:textSize="24sp"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:background="@drawable/gray_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>